_config: Allow jekyll to serve __init__ files

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
-
+include:
+ - __init__.py
 
 ### content configuration ###
 title:       "coala - Code Analysis Made Easy"
