--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 ### content configuration ###
 title:       "coala - Code Analysis Made Easy"
 keywords:    "coala, review, analysis, static, bears"
-description: "coala is a simple COde AnaLysis Application. Its goal is to make static code analysis easy while remaining completely modular and therefore extendable and language independent. coala is written with a lower case c."
+description: "coala provides a common command-line interface for linting and fixing all your code, regardless of the programming languages you use."
 source_link: "https://github.com/coala-analyzer/coala/"
 favicon:     "https://raw.githubusercontent.com/coala-analyzer/coala-artwork/master/artwork/coala_bear.png"
 
